fix scroll on ios

--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -107,4 +107,5 @@ a {
     max-height: 100vh;
     overflow-y: auto;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
